--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
+    "cypress-plugin-snapshots": "^1.4.4",
     "pinia": "^2.0.32",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
